git fill update

--- a/git1.html
+++ b/git1.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>college register</title>
+    <title style="background-color: black;">college register</title>
 
 </head>
-<body>
-    <center><h1>college register </h1></center>
-    <form>
-        <table border="2">
-            <TR><TD>NAME:</TD><TD>MAHA</TD></TR>
-            <TR><TD>AGE:</TD><TD>19</TD></TR>
-            <TR><TD>DEPARMENT:</TD> <TD>BA</TD></TR>
-            <TR><TD>BRANCH:</TD>ENGLISH</TR>
-
-        </table>
+<body> <CEnter><H1>COLLEGE REGISTER</H1></CEnter>
+    <form><CEnter> <table border="5">
+        <tr><td>NAME</td> <TD>AGE</TD> <TD> BRANCH </TD> <TD>DEPARTMENT</TD></tr> 
+        <TR><TD>MAHA</TD> <TD>19</TD> <TD>ENGLISH</TD> <TD>BA</TD></TR>
+        <TR><TD>KAVI</TD> <TD>19</TD> <TD>COMPUTER SCIENCE</TD> <TD> BS.C</TD></TR>
+        <TR><TD>THIRU</TD><TD>19</TD><TD>C</TD> <TD>BS.C</TD></TR>
+        <tr><td>kavitha</td> <td>19</td> <td>cs</td> <td>BS.C</td></tr>
+        <TR><TD>chandru</TD> <td>19</td> <td>cs
+        </td> <td>BS.C</td></TR>
+    </table></CEnter>
     </form>
+    
+    
 </body>
 </html>
